--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         var boxes = [];
         var minHeight = 15;
         var maxHeight = 50;
+        var maxSlabs = Math.ceil(maxHeight / 3);
 
         var labels = [
             "About Me", "Projects", "Contact",
@@ -85,43 +86,47 @@
                 height: Math.random() * (maxHeight - minHeight) + minHeight,
                 targetHeight: Math.random() * (maxHeight - minHeight) + minHeight,
                 animating: true,
-                label: labels[index]
+                label: labels[index],
+                slabs: []
             };
 
             group.position.x = (i - 1) * (boxSize + spacing);
             group.position.z = (j - 1) * (boxSize + spacing);
 
-            updateSlabs(group, colors[index]);
-
-            scene.add(group);
-            boxes.push(group);
-        }
-
-        function updateSlabs(group, color) {
-            // Remove existing slabs
-            while (group.children.length > 0) {
-                var child = group.children.pop();
-                child.geometry.dispose();
-                child.material.dispose();
-            }
-
-            var height = group.userData.height;
-            var numSlabs = Math.floor(height / 3);
-
+            // Create slabs
             var geometry = new THREE.PlaneGeometry(boxSize, boxSize);
             var material = new THREE.MeshPhongMaterial({
-                color: color,
+                color: colors[index],
                 side: THREE.DoubleSide,
                 shininess: 50
             });
 
-            for (var k = 0; k < numSlabs; k++) {
+            for (var k = 0; k < maxSlabs; k++) {
                 var slab = new THREE.Mesh(geometry, material);
                 slab.rotation.x = -Math.PI / 2;
                 slab.position.y = (k + 1) * 3;
                 slab.receiveShadow = true;
                 slab.castShadow = true;
                 group.add(slab);
+                group.userData.slabs.push(slab);
+            }
+
+            updateSlabsVisibility(group);
+
+            scene.add(group);
+            boxes.push(group);
+        }
+
+        function updateSlabsVisibility(group) {
+            var height = group.userData.height;
+            var numSlabs = Math.floor(height / 3);
+
+            for (var i = 0; i < group.userData.slabs.length; i++) {
+                if (i < numSlabs) {
+                    group.userData.slabs[i].visible = true;
+                } else {
+                    group.userData.slabs[i].visible = false;
+                }
             }
         }
 
@@ -148,7 +153,7 @@
                     var delta = (group.userData.targetHeight - group.userData.height) * 0.02;
                     group.userData.height += delta;
 
-                    updateSlabs(group, colors[idx]);
+                    updateSlabsVisibility(group);
                 }
             });
 
@@ -175,14 +180,21 @@
                 var intersectedObject = intersects[0].object;
                 var intersectedGroup = intersectedObject.parent;
 
-                boxes.forEach(function(group) {
-                    if (group === intersectedGroup) {
-                        group.userData.animating = false;
-                        showLabel(event.clientX, event.clientY, group.userData.label);
-                    } else {
-                        group.userData.animating = true;
-                    }
-                });
+                // Traverse up to find the group with userData
+                while (intersectedGroup && !intersectedGroup.userData.label) {
+                    intersectedGroup = intersectedGroup.parent;
+                }
+
+                if (intersectedGroup && intersectedGroup.userData.label) {
+                    boxes.forEach(function(group) {
+                        if (group === intersectedGroup) {
+                            group.userData.animating = false;
+                            showLabel(event.clientX, event.clientY, group.userData.label);
+                        } else {
+                            group.userData.animating = true;
+                        }
+                    });
+                }
             } else {
                 boxes.forEach(function(group) {
                     group.userData.animating = true;
@@ -204,12 +216,20 @@
             if (intersects.length > 0) {
                 var intersectedObject = intersects[0].object;
                 var intersectedGroup = intersectedObject.parent;
-                var sectionName = intersectedGroup.userData.label;
 
-                // Handle navigation to the section
-                alert("Navigating to " + sectionName);
-                // Replace the alert with actual navigation logic
-                // For example: window.location.href = 'your-url-here';
+                // Traverse up to find the group with userData
+                while (intersectedGroup && !intersectedGroup.userData.label) {
+                    intersectedGroup = intersectedGroup.parent;
+                }
+
+                if (intersectedGroup && intersectedGroup.userData.label) {
+                    var sectionName = intersectedGroup.userData.label;
+
+                    // Handle navigation to the section
+                    alert("Navigating to " + sectionName);
+                    // Replace the alert with actual navigation logic
+                    // For example: window.location.href = 'your-url-here';
+                }
             }
         }
 
