--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js Animated Slab Grid with Enhanced Lighting</title>
+    <title>Three.js Animated Slab Grid with Improved Shading</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
@@ -27,7 +27,7 @@
         document.body.appendChild(renderer.domElement);
 
         // Add lights for shading
-        var ambientLight = new THREE.AmbientLight(0x404040, 1); // Soft ambient light
+        var ambientLight = new THREE.AmbientLight(0x404040, 1.5); // Soft ambient light
         scene.add(ambientLight);
 
         var directionalLight = new THREE.DirectionalLight(0xffffff, 1);
@@ -38,11 +38,6 @@
         directionalLight.shadow.camera.near = 0.5;
         directionalLight.shadow.camera.far = 500;
         scene.add(directionalLight);
-
-        var pointLight = new THREE.PointLight(0xffffff, 0.8);
-        pointLight.position.set(50, 100, 50);
-        pointLight.castShadow = true;
-        scene.add(pointLight);
 
         // Create a grid of boxes with slabs
         var gridSize = 3;
@@ -93,12 +88,12 @@
             var numSlabs = Math.floor(height / 3);
 
             var geometry = new THREE.PlaneGeometry(boxSize, boxSize, 1, 1);
-            var material = new THREE.MeshStandardMaterial({ color: color, side: THREE.DoubleSide, metalness: 0.3, roughness: 0.6 });
+            var material = new THREE.MeshLambertMaterial({ color: color, side: THREE.DoubleSide });
 
             for (var k = 0; k < numSlabs; k++) {
                 var slab = new THREE.Mesh(geometry, material);
                 slab.rotation.x = -Math.PI / 2;
-                slab.position.y = (k + 1) * 3;
+                slab.position.y = (k + 1) * 3.05; // Add slight spacing to avoid overlap artifacts
                 slab.receiveShadow = true;
                 slab.castShadow = true;
                 group.add(slab);
